2004-11-24  Aldy Hernandez  <aldyh@redhat.com>

	* tree.c (recompute_tree_invarant_for_addr_expr): The address of a
	thread-local variable is invariant.

2004-11-24  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>

	* tree-pretty-print.c (dump_generic_node, case POINTER_TYPE):
	Handle TYPE_REF_CAN_ALIAS_ALL.
	(print_declaration): Print array dimensions like dump_generic_node.

	* fold-const.c (operand_equal_p): Remove kludge allowing ARG0 and
	ARG1 to be null; instead define OP_SAME and OP_SAME_NULL and use them.

2004-11-24  Nathan Sidwell  <nathan@codesourcery.com>

	* bitmap.c (INLINE): Do not define.
	(bitmap_elem_to_freelist, bitmap_element_free,
	bitmap_element_allocate, bitmap_clear, bitmap_element_zerop,
	bitmap_element_link, bitmap_find_bit): Use inline keyword/macro.

2004-11-24  Kazu Hirata  <kazu@cs.umass.edu>

	* tree-ssa-dom.c (cprop_into_successor_phis): Remove code to
	find the index of a PHI argument.  Use e->dest_idx instead.
	Replace hint with index.

	* tree-ssa-dom.c (cprop_into_successor_phis): Replace index
	with indx.

2004-11-24  Diego Novillo  <dnovillo@redhat.com>

	* tree-ssa-alias.c (merge_pointed_to_info): Fix comment
	regarding PT_MALLOC.

2004-11-24  Joseph Myers  <joseph@codesourcery.com>

	* config/i386/i386.c (optimization_options): Use
	SUBTARGET_OPTIMIZATION_OPTIONS.
	* config/i386/sol2-10.h (SUBTARGET_OPTIMIZATION_OPTIONS): Define.
	(TARGET_SUBTARGET_DEFAULT): Don't include
	MASK_OMIT_LEAF_FRAME_POINTER.

2004-11-24  Mark Mitchell  <mark@codesourcery.com>

	* config/i386/sol2.h (X86_FILE_START_VERSION_DIRECTIVE): 
	Define to false.

2004-11-24  Joseph Myers  <joseph@codesourcery.com>

	* config/i386/t-sol2-10 (MULTILIB_DIRNAMES, MULTILIB_OSDIRNAMES):
	Use amd64 instead of 64.

2004-11-24  Mark Mitchell  <mark@codesourcery.com>
            Joseph Myers  <joseph@codesourcery.com>

	* crtstuff.c (IN_LIBGCC2): Define it.
	(EH_FRAME_SECTION_CONST): Check EH_TABLES_CAN_BE_READ_ONLY
	instead of HAVE_LD_RO_RW_SECTION_MIXING.